# sentiric-coqui-tts-service

./: Dockerfile  README.md  TASKS.md  docker-compose.service.yml  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py  logging.py
app/services/: tts_service.py
